--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -77,8 +77,10 @@
 
   body {
     font-feature-settings:
-      "rlig" 1,
-      "calt" 1;
+      'rlig' 1,
+      'calt' 1;
+    background-image: url('../assets/lines.png');
+    background-size: 100%;
   }
 
   .free-product {
